--- a/shili-tuozhanpian/扩展-shortcode-music/index.html
+++ b/shili-tuozhanpian/扩展-shortcode-music/index.html
@@ -325,9 +325,9 @@ music shortcode 基于 APlayer 和 MetingJS 提供了一个内嵌的响应式音
                   href="/guestbook1/"
                   title="留言"
                   
-                ><i class='fa fa-road' style='color:red'></i> <i class="fa-solid fa-comments fa-fw fa-sm" aria-hidden="true"></i> 留言 <span class='alert'>New!</span></a></li><li class="menu-item theme-switch" title="切换主题">
-          <i class="fa-solid fa-adjust fa-fw" aria-hidden="true"></i>
-        </li></ul>
+                ><i class='fa fa-road' style='color:red'></i> <i class="fa-solid fa-comments fa-fw fa-sm" aria-hidden="true"></i> 留言 <span class='alert'>New!</span></a></li><li class="menu-item menu-system">
+          <span class="menu-system-item theme-switch" title="切换主题"><i class="fa-solid fa-adjust fa-fw" aria-hidden="true"></i></span></li>
+      </ul>
     </nav>
   </div>
 </header><div class="search-dropdown desktop">
