关于 shiqustudio/hugo-blog@8abf781b8dc5375a2e1abcebf5c037379b848628

--- a/tutorial/shili-tuozhanpian/扩展-shortcodes/index.html
+++ b/tutorial/shili-tuozhanpian/扩展-shortcodes/index.html
@@ -115,9 +115,9 @@ FixIt 主题在 Hugo 内置的 shortcode 的基础上提供多个扩展的 short
               <a
                 class="menu-link"
                 href="/about/"
-                title="關於"
+                title="关于"
                 
-              ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 關於</a><i class="dropdown-icon fa-solid fa-chevron-down" aria-hidden="true"></i>
+              ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 关于</a><i class="dropdown-icon fa-solid fa-chevron-down" aria-hidden="true"></i>
                 <ul class="sub-menu">
                   <li
                         class="menu-item"
@@ -294,9 +294,9 @@ FixIt 主题在 Hugo 内置的 shortcode 的基础上提供多个扩展的 short
                   <a
                     class="menu-link"
                     href="/about/"
-                    title="關於"
+                    title="关于"
                     
-                  ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 關於</a>
+                  ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 关于</a>
                   <i class="dropdown-icon fa-solid fa-chevron-right" aria-hidden="true"></i>
                 </span>
                 <ul class="sub-menu">
