--- a/website/ai工具合集/index.html
+++ b/website/ai工具合集/index.html
@@ -119,9 +119,9 @@ ChatGPT 是一款先进的人工智慧语言模型，由OpenAI研发并基于GPT
               <a
                 class="menu-link"
                 href="/about/"
-                title="關於"
+                title="关于"
                 
-              ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 關於</a><i class="dropdown-icon fa-solid fa-chevron-down" aria-hidden="true"></i>
+              ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 关于</a><i class="dropdown-icon fa-solid fa-chevron-down" aria-hidden="true"></i>
                 <ul class="sub-menu">
                   <li
                         class="menu-item"
@@ -298,9 +298,9 @@ ChatGPT 是一款先进的人工智慧语言模型，由OpenAI研发并基于GPT
                   <a
                     class="menu-link"
                     href="/about/"
-                    title="關於"
+                    title="关于"
                     
-                  ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 關於</a>
+                  ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 关于</a>
                   <i class="dropdown-icon fa-solid fa-chevron-right" aria-hidden="true"></i>
                 </span>
                 <ul class="sub-menu">
