--- a/friends/index.html
+++ b/friends/index.html
@@ -25,7 +25,7 @@
 <meta name="application-name" content="FixIt">
 <meta name="apple-mobile-web-app-title" content="FixIt"><meta name="theme-color" data-light="#f8f8f8" data-dark="#252627" content="#f8f8f8"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://shiqustudio.github.io/friends/" /><link rel="prev" href="https://shiqustudio.github.io/guestbook/" /><link rel="next" href="https://shiqustudio.github.io/question/" /><link rel="stylesheet" href="/css/style.min.cfd83e42343dbbf31a00b0f590119aae0e020d7d64db5107c6bd2752a32013b3.css" integrity="sha256-z9g&#43;QjQ9u/MaALD1kBGarg4CDX1k21EHxr0nUqMgE7M="><link rel="stylesheet" href="/lib/fontawesome-free/all.min.01b035efb5dfa529c512f82962ed633328222da6f33c224244806d4798c67349.css" integrity="sha256-AbA177XfpSnFEvgpYu1jMygiLabzPCJCRIBtR5jGc0k="><link rel="stylesheet" href="/lib/animate/animate.min.5fbaeb9f8e25d7e0143bae61d4b1802c16ce7390b96ceb2d498b0d96ff4c853f.css" integrity="sha256-X7rrn44l1&#43;AUO65h1LGALBbOc5C5bOstSYsNlv9MhT8="><script type="application/ld+json">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://shiqustudio.github.io/friends/" /><link rel="prev" href="https://shiqustudio.github.io/guestbook/" /><link rel="next" href="https://shiqustudio.github.io/about/" /><link rel="stylesheet" href="/css/style.min.cfd83e42343dbbf31a00b0f590119aae0e020d7d64db5107c6bd2752a32013b3.css" integrity="sha256-z9g&#43;QjQ9u/MaALD1kBGarg4CDX1k21EHxr0nUqMgE7M="><link rel="stylesheet" href="/lib/fontawesome-free/all.min.01b035efb5dfa529c512f82962ed633328222da6f33c224244806d4798c67349.css" integrity="sha256-AbA177XfpSnFEvgpYu1jMygiLabzPCJCRIBtR5jGc0k="><link rel="stylesheet" href="/lib/animate/animate.min.5fbaeb9f8e25d7e0143bae61d4b1802c16ce7390b96ceb2d498b0d96ff4c853f.css" integrity="sha256-X7rrn44l1&#43;AUO65h1LGALBbOc5C5bOstSYsNlv9MhT8="><script type="application/ld+json">
   {
     "@context": "http://schema.org",
     "@type": "BlogPosting",
@@ -111,9 +111,9 @@
               <a
                 class="menu-link"
                 href="/about/"
-                title="關於"
+                title="关于"
                 
-              ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 關於</a><i class="dropdown-icon fa-solid fa-chevron-down" aria-hidden="true"></i>
+              ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 关于</a><i class="dropdown-icon fa-solid fa-chevron-down" aria-hidden="true"></i>
                 <ul class="sub-menu">
                   <li
                         class="menu-item active"
@@ -290,9 +290,9 @@
                   <a
                     class="menu-link"
                     href="/about/"
-                    title="關於"
+                    title="关于"
                     
-                  ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 關於</a>
+                  ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 关于</a>
                   <i class="dropdown-icon fa-solid fa-chevron-right" aria-hidden="true"></i>
                 </span>
                 <ul class="sub-menu">
