--- a/tutorial/shili-tuozhanpian/扩展-shortcode-echarts/index.html
+++ b/tutorial/shili-tuozhanpian/扩展-shortcode-echarts/index.html
@@ -115,9 +115,9 @@ echarts shortcode 使用 ECharts 库提供数据可视化的功能。"/>
               <a
                 class="menu-link"
                 href="/about/"
-                title="關於"
+                title="关于"
                 
-              ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 關於</a><i class="dropdown-icon fa-solid fa-chevron-down" aria-hidden="true"></i>
+              ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 关于</a><i class="dropdown-icon fa-solid fa-chevron-down" aria-hidden="true"></i>
                 <ul class="sub-menu">
                   <li
                         class="menu-item"
@@ -294,9 +294,9 @@ echarts shortcode 使用 ECharts 库提供数据可视化的功能。"/>
                   <a
                     class="menu-link"
                     href="/about/"
-                    title="關於"
+                    title="关于"
                     
-                  ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 關於</a>
+                  ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 关于</a>
                   <i class="dropdown-icon fa-solid fa-chevron-right" aria-hidden="true"></i>
                 </span>
                 <ul class="sub-menu">
