--- a/website/短链/index.html
+++ b/website/短链/index.html
@@ -123,9 +123,9 @@
               <a
                 class="menu-link"
                 href="/about/"
-                title="關於"
+                title="关于"
                 
-              ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 關於</a><i class="dropdown-icon fa-solid fa-chevron-down" aria-hidden="true"></i>
+              ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 关于</a><i class="dropdown-icon fa-solid fa-chevron-down" aria-hidden="true"></i>
                 <ul class="sub-menu">
                   <li
                         class="menu-item"
@@ -302,9 +302,9 @@
                   <a
                     class="menu-link"
                     href="/about/"
-                    title="關於"
+                    title="关于"
                     
-                  ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 關於</a>
+                  ><i class="fa-solid fa-info-circle text-warning fa-fw fa-sm" aria-hidden="true"></i> 关于</a>
                   <i class="dropdown-icon fa-solid fa-chevron-right" aria-hidden="true"></i>
                 </span>
                 <ul class="sub-menu">
