--- a/tutorial/shili-jinjiepian/index.html
+++ b/tutorial/shili-jinjiepian/index.html
@@ -404,7 +404,14 @@
     <li><a href="#pwa-支持">PWA 支持</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><p>探索 Hugo - <strong>FixIt</strong> 主题的的进阶使用。</p>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-03-17，文中内容可能已过时。</div>
+      </div>
+    </div><p>探索 Hugo - <strong>FixIt</strong> 主题的的进阶使用。</p>
 <h2 id="自定义样式">自定义样式</h2>
 <p><a href="https://github.com/hugo-fixit/FixIt/releases/tag/v0.2.8"target="_blank" rel="external nofollow noopener noreferrer"><img loading="lazy" src="https://fixit.lruihao.cn/svg/version/0.2.8-changed.zh-cn.min.svg" srcset="https://fixit.lruihao.cn/svg/version/0.2.8-changed.zh-cn.min.svg, https://fixit.lruihao.cn/svg/version/0.2.8-changed.zh-cn.min.svg 1.5x, https://fixit.lruihao.cn/svg/version/0.2.8-changed.zh-cn.min.svg 2x" sizes="auto" data-title="FixIt 0.2.8 | 更改" data-alt="FixIt 0.2.8 | 更改" style="background: url(/svg/loading.min.svg) no-repeat center;" onload="this.title=this.dataset.title;this.alt=this.dataset.alt;for(const a of ['style','data-title','data-alt','onerror','onload']){this.removeAttribute(a);}this.dataset.lazyloaded='';" onerror="this.title=this.dataset.title;this.alt=this.dataset.alt;for(const a of ['style','data-title','data-alt','onerror','onload']){this.removeAttribute(a);}"/></a></p>
 <div class="details admonition note open">
