--- a/tutorial/shili-kuaisushangshou/index.html
+++ b/tutorial/shili-kuaisushangshou/index.html
@@ -403,7 +403,14 @@
     <li><a href="#寻求帮助">寻求帮助</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><p>学习在几分钟内创建一个 Hugo <strong>FixIt</strong> 站点。</p>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-03-16，文中内容可能已过时。</div>
+      </div>
+    </div><p>学习在几分钟内创建一个 Hugo <strong>FixIt</strong> 站点。</p>
 <p>以下步骤可帮助您初始化新网站。如果您根本不了解 Hugo，我们强烈建议您通过阅读此 <a href="https://gohugo.io/getting-started/"target="_blank" rel="external nofollow noopener noreferrer">快速入门文档<i class="fa-solid fa-external-link-alt fa-fw fa-xs ms-1 text-secondary" aria-hidden="true"></i></a> 进一步了解它。或者如果你已经了解 Hugo，你也可以从一个模板直接开始：</p>
 <ul>
 <li><a href="https://github.com/hugo-fixit/hugo-fixit-blog-git"target="_blank" rel="external nofollow noopener noreferrer">基于 Git 子模块的快速入门模板<i class="fa-solid fa-external-link-alt fa-fw fa-xs ms-1 text-secondary" aria-hidden="true"></i></a></li>
