--- a/tutorial/shili-neirongguanli/index.html
+++ b/tutorial/shili-neirongguanli/index.html
@@ -415,7 +415,14 @@
     <li><a href="#shortcodes">Shortcodes</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><p>了解如何在 <strong>FixIt</strong> 主题中快速，直观地创建和组织内容。</p>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-03-17，文中内容可能已过时。</div>
+      </div>
+    </div><p>了解如何在 <strong>FixIt</strong> 主题中快速，直观地创建和组织内容。</p>
 <h2 id="内容组织">内容组织</h2>
 <p>以下是一些方便你清晰管理和生成文章的目录结构建议：</p>
 <ul>
