--- a/tutorial/shili-rumenpian/index.html
+++ b/tutorial/shili-rumenpian/index.html
@@ -423,7 +423,14 @@
     </li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><p>探索 Hugo - <strong>FixIt</strong> 主题的的基础知识和背后的核心概念。</p>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-03-17，文中内容可能已过时。</div>
+      </div>
+    </div><p>探索 Hugo - <strong>FixIt</strong> 主题的的基础知识和背后的核心概念。</p>
 <h2 id="安装方式">安装方式</h2>
 <a href="https://github.com/hugo-fixit/FixIt" title="source of FixIt Theme"target="_blank" rel="external nofollow noopener noreferrer" class="card-link"><span class="cl-backdrop" style="--cl-bg-url: url(/fixit.min.svg);"></span>
     <span class="cl-content">
