--- a/tutorial/shili-tuozhanpian/tuozhanpian/index.html
+++ b/tutorial/shili-tuozhanpian/tuozhanpian/index.html
@@ -398,7 +398,14 @@
     <li><a href="#分组内容">分组内容</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><p><code>typeit</code> shortcode 基于 <a href="https://typeitjs.com/"target="_blank" rel="external nofollow noopener noreferrer">TypeIt<i class="fa-solid fa-external-link-alt fa-fw fa-xs ms-1 text-secondary" aria-hidden="true"></i></a> 提供了打字动画。</p>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-03-17，文中内容可能已过时。</div>
+      </div>
+    </div><p><code>typeit</code> shortcode 基于 <a href="https://typeitjs.com/"target="_blank" rel="external nofollow noopener noreferrer">TypeIt<i class="fa-solid fa-external-link-alt fa-fw fa-xs ms-1 text-secondary" aria-hidden="true"></i></a> 提供了打字动画。</p>
 <p>只需将你需要打字动画的内容插入 <code>typeit</code> shortcode 中即可。</p>
 <p><code>typeit</code> shortcode 有以下命名参数：</p>
 <ul>
