deploy: shiqustudio/hugo-blog@fe56f445e3dddc4c6a89790c4192ad2913743723

--- a/tutorial/shili-tuozhanpian/tuozhanpian/index.html
+++ b/tutorial/shili-tuozhanpian/tuozhanpian/index.html
@@ -411,9 +411,9 @@
     <li><a href="#分组内容">分组内容</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition warning open">
       <div class="details-summary admonition-title">
-        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+        <i class="icon fa-solid fa-exclamation-triangle fa-fw" aria-hidden="true"></i>警告<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
       </div>
       <div class="details-content">
         <div class="admonition-content">本文最后更新于 2023-03-17，文中内容可能已过时。</div>
