deploy: shiqustudio/hugo-blog@8b7b18ee38638ebbed5f47998733ed7b000b3316

--- a/website/官煤/index.html
+++ b/website/官煤/index.html
@@ -421,7 +421,14 @@
     </li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><blockquote>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-07-06，文中内容可能已过时。</div>
+      </div>
+    </div><blockquote>
 <p>🤖整理并分享一些官方发布的公益、权威信息资源</p>
 </blockquote>
 <h3 id="drugbank-online">DrugBank Online</h3>
