update🎉 shiqustudio/hugo-blog@583b0bce2713281ae1e03ba381758734ecb4df45

--- a/books/文档翻译/index.html
+++ b/books/文档翻译/index.html
@@ -428,7 +428,14 @@
     </li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><p>💡 有了这些PDF翻译软件，再也不愁看英文文献了</p>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-12-01，文中内容可能已过时。</div>
+      </div>
+    </div><p>💡 有了这些PDF翻译软件，再也不愁看英文文献了</p>
 <h2 id="pdf类型">PDF类型</h2>
 <blockquote>
 <p><strong>在翻译PDF文档前，我们要先了解所翻译的PDF文档是属于什么编码类型</strong></p>
