--- a/website/生活指南/index.html
+++ b/website/生活指南/index.html
@@ -433,7 +433,14 @@
     </li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><blockquote>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-11-30，文中内容可能已过时。</div>
+      </div>
+    </div><blockquote>
 <p>潮流生活指南，商品历史价格查询、实用生活技巧、物品对比等</p>
 </blockquote>
 <h3 id="versus">Versus</h3>
