update🎉 shiqustudio/hugo-blog@23715ae2a421e8bff3eb228d794dd077bbc92aeb

--- a/personal/5w2h分析法/index.html
+++ b/personal/5w2h分析法/index.html
@@ -421,7 +421,14 @@
     <li><a href="#举例分析">举例分析</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><blockquote>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-12-06，文中内容可能已过时。</div>
+      </div>
+    </div><blockquote>
 <p>平时遇到问题，如何应用一些分析方法来帮助我们系统性思考呢？5W2H分析法。</p>
 </blockquote>
 <h2 id="由来">由来</h2>
