--- a/personal/专注力/index.html
+++ b/personal/专注力/index.html
@@ -468,7 +468,14 @@
     <li><a href="#健康饮食">健康饮食</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><blockquote>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-12-06，文中内容可能已过时。</div>
+      </div>
+    </div><blockquote>
 <p>本文主要针对的是无法长时间保持注意力的人。普通人能一次性保持高度专注的时间段一般是 30~40 分钟，如果低于这个时间，那就算是专注能力偏弱了。</p>
 </blockquote>
 <p>因为大脑随时处于过度活跃、灵感喷发的状态，所以我自己以前也无法长时间地在自己不喜欢的事情上保持注意力。但是现在我已经可以做到保持 10 小时以上的连续专注，所以我对于自己分享的观念和方法极其有底气，这些内容对任何一个需要提升专注能力的人都是有效的，只要敢信就会有收获。</p>
