--- a/personal/提问的智慧/index.html
+++ b/personal/提问的智慧/index.html
@@ -459,7 +459,14 @@
     <li><a href="#如何更好地回答问题">如何更好地回答问题</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><blockquote>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-12-06，文中内容可能已过时。</div>
+      </div>
+    </div><blockquote>
 <p>平时我们工作学习中都会遇到很多问题，如何更好的提问，从而促进问题的解决呢？问对问题才有会有正确的答案。这里强烈推荐看这篇《提问的智慧》，本文翻译自<a href="http://www.catb.org/~esr/faqs/smart-questions.html"target="_blank" rel="external nofollow noopener noreferrer">How To Ask Questions The Smart Way<i class="fa-solid fa-external-link-alt fa-fw fa-xs ms-1 text-secondary" aria-hidden="true"></i></a>，原文在GitHub有几万的赞，足以见得本文被推崇的程度。</p>
 </blockquote>
 <h2 id="简介">简介</h2>
