--- a/personal/杂谈合集/index.html
+++ b/personal/杂谈合集/index.html
@@ -425,7 +425,14 @@
     </li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><blockquote>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-12-06，文中内容可能已过时。</div>
+      </div>
+    </div><blockquote>
 <p>想必在职场中，总是会听到或者提及工作复盘一词，相信很多人在职场工作中也会用到复盘，当我们在完成一个项目时，如果要想形成一个完整的闭环，需要我们进行复盘，复盘能帮助我们快速梳理工作中出现的问题，从而吸取经验教训，有所成长。学会科学高效的复盘是职场人一项重要的能力。但很多人的复盘没有真正解决问题，只是为了复盘而复盘。怎样高效复盘呢，就让我们今天来聊聊复盘的知识吧。</p>
 </blockquote>
 <p>记得柳传志讲过,“通过复盘总结经验教训、尤其是失败的事情，要认真，不给自己留任何情面的把这个事想清楚， 把事情想明白，然后就可以谋定而后动了。”</p>
