--- a/personal/构建外脑/index.html
+++ b/personal/构建外脑/index.html
@@ -447,7 +447,14 @@
     <li><a href="#后记知识的重塑">后记：知识的重塑</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><blockquote>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-12-06，文中内容可能已过时。</div>
+      </div>
+    </div><blockquote>
 <p>本文将探讨在新一轮的 AI 变革之下，如何用新工具来帮助扩展大脑思维与记忆的边界，以及知识工作流的新方法，激发潜能，构建外脑(ExoBrain)。</p>
 </blockquote>
 <p>作为一名 AI 乐观派，Linkedin 的创始人 <a href="https://www.linkedin.com/in/reidhoffman?ref=indigox.me"target="_blank" rel="external nofollow noopener noreferrer">Reid Hoffman<i class="fa-solid fa-external-link-alt fa-fw fa-xs ms-1 text-secondary" aria-hidden="true"></i></a> 在他今年初与 ChatGPT 协同撰写的新书《<a href="https://www.impromptubook.com/?ref=indigox.me"target="_blank" rel="external nofollow noopener noreferrer">Impromptu<i class="fa-solid fa-external-link-alt fa-fw fa-xs ms-1 text-secondary" aria-hidden="true"></i></a>》（我和 GPT-4 协同翻译了中文版《<a href="https://h5.api.app.cheerspublishing.com/book/1661673553168687104?inviter_id=OTN0g3qHtiKOsuQL3%2BnRk5ZdOvCmX7rhvhbIvCeOIEM%3D&amp;sourcePage=1&amp;ref=indigox.me"target="_blank" rel="external nofollow noopener noreferrer">GPT 时代人类再腾飞<i class="fa-solid fa-external-link-alt fa-fw fa-xs ms-1 text-secondary" aria-hidden="true"></i></a>》）中最重要的一个结论就是：不应该把 AI 看作威胁，而应该当作伙伴，<strong>一个可以帮助我们充分发挥作为人类的潜力的伙伴</strong>。2022 年底推出的 ChatGPT 让我们看到了 AI 的潜能，大语言模型涌现出来的理解、表达与推理能力，会让人类与机器的协作效率，在计算机、互联网之后，上升到一个新的台阶。</p>
