--- a/tools/ssl证书/index.html
+++ b/tools/ssl证书/index.html
@@ -416,7 +416,14 @@
     <li><a href="#freessl">freessl</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><p>💡 使用用国内服务的可直接申请TrustAsia CA证书 如：宝塔、腾讯云、阿里云等，证书到期后重新申请即可。</p>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-12-05，文中内容可能已过时。</div>
+      </div>
+    </div><p>💡 使用用国内服务的可直接申请TrustAsia CA证书 如：宝塔、腾讯云、阿里云等，证书到期后重新申请即可。</p>
 <h2 id="cloudflare">Cloudflare</h2>
 <p>📁 网站简介：全球知名网站，只要将域名解析cf上，并开启cloudflare的cdn就可以直接使用免费证书，无需做其他设置。</p>
 <p>🔗 资源地址：<a href="https://cloudflare.com/"target="_blank" rel="external nofollow noopener noreferrer">点击跳转<i class="fa-solid fa-external-link-alt fa-fw fa-xs ms-1 text-secondary" aria-hidden="true"></i></a></p>
