--- a/tools/公共doh/index.html
+++ b/tools/公共doh/index.html
@@ -437,7 +437,14 @@
     </li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><p>💡 DoH 对于普通用户的用处主要体现了防止运营商对内容进行HTTP劫持，可以一定程度减少广告弹窗与内容篡改。更多可通过<a href="https://remeins.com/index/app/dns"target="_blank" rel="external nofollow noopener noreferrer">地址列表<i class="fa-solid fa-external-link-alt fa-fw fa-xs ms-1 text-secondary" aria-hidden="true"></i></a>查看。</p>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-12-06，文中内容可能已过时。</div>
+      </div>
+    </div><p>💡 DoH 对于普通用户的用处主要体现了防止运营商对内容进行HTTP劫持，可以一定程度减少广告弹窗与内容篡改。更多可通过<a href="https://remeins.com/index/app/dns"target="_blank" rel="external nofollow noopener noreferrer">地址列表<i class="fa-solid fa-external-link-alt fa-fw fa-xs ms-1 text-secondary" aria-hidden="true"></i></a>查看。</p>
 <h2 id="国内服务商">国内服务商</h2>
 <h3 id="1114-dns">1、114 DNS</h3>
 <p>✅高速 电信联通移动全国通用DNS，能引导您到最快的网站，手机和计算机都可用
