--- a/personal/费曼学习法实践/index.html
+++ b/personal/费曼学习法实践/index.html
@@ -439,7 +439,14 @@
     <li><a href="#工具与参考">工具与参考</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><blockquote>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-12-06，文中内容可能已过时。</div>
+      </div>
+    </div><blockquote>
 <p>把自己如何获取信息、聚焦阅读、汇总研究和深度长文输出的方法分享给大家，全文由费曼学习法、信息获取与知识输出的方法论，还有笔记工具的进化三部分组成。</p>
 </blockquote>
 <h2 id="i-什么是费曼学习法">I. 什么是费曼学习法</h2>
