update🎉 shiqustudio/hugo-blog@dbd1826b485b4985aaf4a6be1f1b2082b85e7077

--- a/dailyshare/视频剪辑/index.html
+++ b/dailyshare/视频剪辑/index.html
@@ -422,7 +422,14 @@
     <li><a href="#魔力玄medlexo">魔力玄Medlexo</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><p>💡 压缩视频、转码视频、倒放视频、合并片段、根据字幕裁切片段、自动配字幕、自动剪辑……</p>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-12-08，文中内容可能已过时。</div>
+      </div>
+    </div><p>💡 压缩视频、转码视频、倒放视频、合并片段、根据字幕裁切片段、自动配字幕、自动剪辑……</p>
 <h2 id="quick-cut">Quick Cut</h2>
 <p>⭐️  资源描述：一款轻量、强大、好用的视频处理软件</p>
 <blockquote>
