update🎇 shiqustudio/hugo-blog@d1ef05224a40639f874f8557001ddd03cabba25a

--- a/website/急救/index.html
+++ b/website/急救/index.html
@@ -422,7 +422,14 @@
     <li><a href="#被狗咬伤了怎么办">🐶被狗咬伤了怎么办？</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><p>💡 收集有关健康安全急救防护知识</p>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-12-18，文中内容可能已过时。</div>
+      </div>
+    </div><p>💡 收集有关健康安全急救防护知识</p>
 <hr>
 <h2 id="女性保护">👩女性保护</h2>
 <p>📣【<strong>当代女性自保指南】 做（独居）女孩，太难了吧！ | 如何最大限度保护自己？</strong></p>
