update🎉 shiqustudio/hugo-blog@f72e807c63d309b6a0f785754bc406b8bde8bc44

--- a/tools/github加速/index.html
+++ b/tools/github加速/index.html
@@ -429,7 +429,14 @@
     <li><a href="#相关推荐">相关推荐</a></li>
   </ul>
 </nav></div>
-      </div><div class="content" id="content" data-end-flag="（完）"><p>💡 GitHub这几年国内普通用户越来越难以访问，github作为全球最大的开源平台，里面有用的内容很多，不管是对专业用户还是普通用户，无法访问都是很严重的问题，使用频率高的推荐使用科学方式，下面的方法适合应急或低频率使用。</p>
+      </div><div class="content" id="content" data-end-flag="（完）"><div class="details admonition note open">
+      <div class="details-summary admonition-title">
+        <i class="icon fa-solid fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fa-solid fa-angle-right fa-fw" aria-hidden="true"></i>
+      </div>
+      <div class="details-content">
+        <div class="admonition-content">本文最后更新于 2023-12-29，文中内容可能已过时。</div>
+      </div>
+    </div><p>💡 GitHub这几年国内普通用户越来越难以访问，github作为全球最大的开源平台，里面有用的内容很多，不管是对专业用户还是普通用户，无法访问都是很严重的问题，使用频率高的推荐使用科学方式，下面的方法适合应急或低频率使用。</p>
 <h2 id="推荐使用">推荐使用</h2>
 <table>
 <thead>
